# unit-factory-ucode

./: .gitignore  .gitmodules  README.md
Half-Marathon-CPP/: .gitignore  LICENSE  README.md
Half-Marathon-CPP/sprint00/t07/: CMakeLists.txt  main.cpp
Half-Marathon-CPP/sprint00/t07/src/: checker.cpp  exit_program.cpp  help.cpp  insert.cpp  inventory.cpp  inventory.h  remove.cpp  show.cpp
Half-Marathon-CPP/sprint01/t02/: CMakeLists.txt  main.cpp
Half-Marathon-CPP/sprint01/t02/src/: algorithmCity.cpp  createCity.cpp  error.cpp  insertCity.cpp  printCity.cpp  visitAll.h
Half-Marathon-CPP/sprint02/t00/: CMakeLists.txt  main.cpp
Half-Marathon-CPP/sprint02/t00/src/: createFile.cpp  errors.cpp  parsFile.cpp  uniqueWords.h
Half-Marathon-CPP/sprint02/t01/: CMakeLists.txt  main.cpp
Half-Marathon-CPP/sprint02/t01/src/: countUniqueWords.h  createFile.cpp  errors.cpp  parsFile.cpp
Half-Marathon-CPP/sprint02/t02/: CMakeLists.txt  main.cpp
Half-Marathon-CPP/sprint02/t02/src/: addBook.cpp  bookSaver.h  deleteBook.cpp  exit_program.cpp  listBook.cpp  manager.cpp  readBook.cpp
Half-Marathon-CPP/sprint05/t02/app/: CMakeLists.txt  main.cpp
Half-Marathon-CPP/sprint05/t02/app/src/: draugr.cpp  draugr.h  error.cpp  splitName.cpp
Libmx/: .gitignore  LICENSE.md  Makefile  README.md  main.c
Libmx/inc/: libmx.h
Libmx/src/: mx_atoi.c  mx_binary_search.c  mx_bubble_sort.c  mx_count_substr.c  mx_count_words.c  mx_create_node.c  mx_del_extra_spaces.c  mx_del_strarr.c  mx_file_to_str.c  mx_get_char_index.c  mx_get_substr_index.c  mx_hex_to_nbr.c  mx_is_odd.c  mx_is_space.c  mx_isdigit.c  mx_itoa.c  mx_leng_file.c  mx_list_size.c  mx_max.c  mx_memccpy.c  mx_memchr.c  mx_memcmp.c  mx_memcpy.c  mx_memmem.c  mx_memmove.c  mx_nbr_to_hex.c  mx_pop_back.c  mx_pop_front.c  mx_pow.c  mx_print_strarr.c  mx_print_unicode.c  mx_printint.c  mx_printstr.c  mx_push_back.c  mx_push_front.c  mx_realloc.c  mx_replace_substr.c  mx_sort_list.c  mx_sqrt.c  mx_str_reverse.c  (+16 more)
Marathon C/Race00/: mx_strlen.c  race00.c
Marathon C/Race01/: mx_cube.c  mx_printchar.c
Marathon C/Race02/: .gitignore
Marathon C/Race04/: Makefile
Pathfinder/: Makefile  easy.txt  pathfinder  pathfinder.h
Pathfinder/inc/: pathfinder.h
Pathfinder/libmx/: Makefile
Pathfinder/src/: createNode.c  main.c  mx_arrlen.c  mx_atoi.c  mx_file_to_arr.c  mx_graph_add_edge.c  mx_graph_algorithm.c  mx_graph_create.c  mx_graph_parse.c  mx_graph_print.c  (+11 more)
Sprint00/: .swp
race00/: main.c  mx_strlen.c
race01/: main_cube.c  mx_printchar.c
race02/: Makefile
race03/: Makefile
race04/: race04
race05/: Makefile
(+528 files in other folders)
